--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <section id="home" class="relative w-full h-screen overflow-hidden flex items-center justify-center">
         <!-- Background Video/Image Placeholder -->
         <div class="absolute inset-0 z-0">
-            <!-- PORTADA: Usamos la imagen exterior (3.jpg) por ser la más impactante -->
-            <img src="imagenes/3.jpg" 
+            <!-- CAMBIO: Se quitó 'imagenes/' de la ruta -->
+            <img src="3.jpg" 
                  onerror="this.src='https://images.unsplash.com/photo-1600607686527-6fb886090705?q=80&w=2700&auto=format&fit=crop'"
                  alt="Fachada Moderna" 
                  class="w-full h-full object-cover opacity-60 animate-[pulse_10s_ease-in-out_infinite]">
@@ -138,8 +138,8 @@
             
             <!-- Project 1 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
-                <!-- IMAGEN 1 (Cocina/Interior) -->
-                <img src="imagenes/1.jpg" 
+                <!-- CAMBIO: Se quitó 'imagenes/' de la ruta -->
+                <img src="1.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?q=80&w=1600&auto=format&fit=crop'"
                      alt="Interior Cocina" 
                      class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
@@ -152,8 +152,8 @@
 
             <!-- Project 2 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
-                <!-- IMAGEN 2 (Dormitorio/Estudio) -->
-                <img src="imagenes/2.jpg" 
+                <!-- CAMBIO: Se quitó 'imagenes/' de la ruta -->
+                <img src="2.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1512958789358-4dac0f368d37?q=80&w=1600&auto=format&fit=crop'"
                      alt="Interior Dormitorio" 
                      class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
@@ -166,8 +166,8 @@
 
             <!-- Project 3 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
-                <!-- IMAGEN 4 (Comedor) -->
-                <img src="imagenes/4.jpg" 
+                <!-- CAMBIO: Se quitó 'imagenes/' de la ruta -->
+                <img src="4.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1600&auto=format&fit=crop'"
                      alt="Interior Comedor" 
                      class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
@@ -180,8 +180,8 @@
 
             <!-- Project 4 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
-                <!-- IMAGEN 5 (Dormitorio detalle) -->
-                <img src="imagenes/5.jpg" 
+                <!-- CAMBIO: Se quitó 'imagenes/' de la ruta -->
+                <img src="5.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1486325212027-8081e485255e?q=80&w=1600&auto=format&fit=crop'"
                      alt="Dormitorio Detalle" 
                      class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
