--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LÍMITE | Visualización Arquitectónica</title>
+    <title>HOYUELA | Visualización Arquitectónica</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,7 +66,7 @@
 
     <!-- Loading Screen -->
     <div id="loader" class="loader">
-        <div class="text-2xl tracking-[0.5em] font-light animate-pulse">LÍMITE</div>
+        <div class="text-2xl tracking-[0.5em] font-light animate-pulse">HOYUELA</div>
     </div>
 
     <!-- Navigation Overlay (Hidden by default) -->
@@ -78,13 +78,13 @@
             <li><a href="#contact" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">CONTACTO</a></li>
         </ul>
         <div class="absolute bottom-10 text-xs text-gray-500 tracking-widest">
-            © 2024 LÍMITE STUDIO
+            © 2024 HOYUELA STUDIO
         </div>
     </div>
 
     <!-- Header / Navbar -->
     <header class="fixed w-full top-0 z-50 px-6 py-6 md:px-12 md:py-8 flex justify-between items-center mix-blend-difference text-white">
-        <a href="#" class="text-xl md:text-2xl font-bold tracking-[0.3em] uppercase z-50">Límite</a>
+        <a href="#" class="text-xl md:text-2xl font-bold tracking-[0.3em] uppercase z-50">Hoyuela</a>
         
         <button onclick="toggleMenu()" class="group z-50 flex flex-col items-end gap-1.5 cursor-pointer focus:outline-none">
             <span id="burger-1" class="block w-8 h-[2px] bg-white transition-transform duration-300"></span>
@@ -210,7 +210,7 @@
                 <h2 class="text-4xl font-light mb-6">EL ESTUDIO</h2>
                 <div class="w-12 h-[1px] bg-white mb-6"></div>
                 <p class="text-sm leading-7 text-gray-400">
-                    Fundado en 2014, LÍMITE ha establecido una reputación internacional por su excelencia en imágenes generadas por computadora (CGI). Trabajamos con los arquitectos y desarrolladores más prestigiosos del mundo.
+                    Fundado en 2014, HOYUELA ha establecido una reputación internacional por su excelencia en imágenes generadas por computadora (CGI). Trabajamos con los arquitectos y desarrolladores más prestigiosos del mundo.
                 </p>
             </div>
             
@@ -277,7 +277,7 @@
         </div>
 
         <div class="mt-24 flex flex-col md:flex-row justify-between items-center text-xs text-gray-600 tracking-widest uppercase">
-            <div>&copy; 2024 Límite Studio. Todos los derechos reservados.</div>
+            <div>&copy; 2024 Hoyuela Studio. Todos los derechos reservados.</div>
             <div class="mt-4 md:mt-0">
                 <a href="#" class="hover:text-gray-400 transition mr-4">Privacidad</a>
                 <a href="#" class="hover:text-gray-400 transition">Términos</a>
