--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -209,7 +209,7 @@
                 <h2 class="text-4xl font-light mb-6">EL ESTUDIO</h2>
                 <div class="w-12 h-[1px] bg-white mb-6"></div>
                 <p class="text-sm leading-7 text-gray-400 mb-8">
-                    Fundado en 2014, HOYUELA ha establecido una reputación internacional por su excelencia en imágenes generadas por computadora (CGI). Trabajamos con los arquitectos y desarrolladores más prestigiosos del mundo.
+                    Fundado en 2004, HOYUELA se ha consolidado como un referente en el mercado nacional. Colaboramos estrechamente con las más prestigiosas inmobiliarias, constructoras y oficinas de arquitectura de Chile, entregando excelencia en cada proyecto.
                 </p>
 
                 <!-- NUEVA SECCIÓN DE DIRECTOR CREATIVO CON FOTO -->
