--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -91,6 +91,7 @@
         <ul class="text-center space-y-8">
             <li><a href="#home" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">INICIO</a></li>
             <li><a href="#work" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">TRABAJOS</a></li>
+            <li><a href="#plantas" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">PLANTAS EVOLUTIVAS</a></li>
             <li><a href="#studio" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">ESTUDIO</a></li>
             <li><a href="#contact" class="nav-link text-3xl md:text-5xl font-light hover:text-gray-400 transition" onclick="toggleMenu()">CONTACTO</a></li>
         </ul>
@@ -198,7 +199,7 @@
     </section>
 
     <!-- SECCIÓN 1: Plantas Evolutivas (Slider Antes/Después) -->
-    <section class="w-full bg-[#050505] py-0 relative border-y border-white/5">
+    <section id="plantas" class="w-full bg-[#050505] py-0 relative border-y border-white/5">
         
         <!-- Franja de texto SUPERIOR -->
         <div class="py-16 text-center px-4 bg-[#050505]">
