--- a/index.html
+++ b/index.html
@@ -307,20 +307,20 @@
 
             <!-- HOTSPOTS (Puntos Calientes) -->
             
-            <!-- 1. Dormitorio Principal (Borde Izquierdo) -->
+            <!-- 1. Dormitorio Principal (Ajustado a 20%) -->
             <button onclick="openModal('2.jpg', 'Dormitorio Principal')" 
-                    class="absolute top-[30%] left-[5%] group z-20 focus:outline-none hotspot-ring">
+                    class="absolute top-[30%] left-[20%] group z-20 focus:outline-none hotspot-ring">
                 <div class="w-4 h-4 bg-white rounded-full shadow-[0_0_15px_rgba(255,255,255,0.8)] group-hover:scale-125 transition duration-300"></div>
-                <!-- Tooltip a la derecha para no salirse de la pantalla -->
-                <div class="absolute -bottom-8 left-0 bg-black/80 text-white text-[10px] px-2 py-1 opacity-0 group-hover:opacity-100 transition whitespace-nowrap tracking-widest uppercase border border-white/20">Dormitorio</div>
+                <!-- Tooltip -->
+                <div class="absolute -bottom-8 left-1/2 -translate-x-1/2 bg-black/80 text-white text-[10px] px-2 py-1 opacity-0 group-hover:opacity-100 transition whitespace-nowrap tracking-widest uppercase border border-white/20">Dormitorio</div>
             </button>
 
-            <!-- 2. Living Comedor (Borde Derecho) -->
+            <!-- 2. Living Comedor (Ajustado a 60%) -->
             <button onclick="openModal('4.jpg', 'Living Comedor')" 
-                    class="absolute top-[60%] left-[85%] group z-20 focus:outline-none hotspot-ring">
+                    class="absolute top-[60%] left-[60%] group z-20 focus:outline-none hotspot-ring">
                 <div class="w-4 h-4 bg-white rounded-full shadow-[0_0_15px_rgba(255,255,255,0.8)] group-hover:scale-125 transition duration-300"></div>
-                <!-- Tooltip a la izquierda para no salirse de la pantalla -->
-                <div class="absolute -bottom-8 right-0 bg-black/80 text-white text-[10px] px-2 py-1 opacity-0 group-hover:opacity-100 transition whitespace-nowrap tracking-widest uppercase border border-white/20">Living Comedor</div>
+                <!-- Tooltip -->
+                <div class="absolute -bottom-8 left-1/2 -translate-x-1/2 bg-black/80 text-white text-[10px] px-2 py-1 opacity-0 group-hover:opacity-100 transition whitespace-nowrap tracking-widest uppercase border border-white/20">Living Comedor</div>
             </button>
 
         </div>
