--- a/index.html
+++ b/index.html
@@ -307,16 +307,18 @@
 
             <!-- HOTSPOTS (Puntos Calientes) -->
             
-            <!-- 1. Dormitorio Principal (Ajustado a 35% en vez de 235%, con color ROJO) -->
-            <button onclick="openModal('2.jpg', 'Dormitorio Principal')" 
+            <!-- 1. Dormitorio Principal (Borde Izquierdo - 35%) -->
+            <!-- CAMBIO: Imagen 'dorprincipal.jpg' -->
+            <button onclick="openModal('dorprincipal.jpg', 'Dormitorio Principal')" 
                     class="absolute top-[30%] left-[35%] group z-20 focus:outline-none hotspot-ring">
                 <div class="w-4 h-4 bg-red-600 rounded-full shadow-[0_0_15px_rgba(220,38,38,0.8)] group-hover:scale-125 transition duration-300"></div>
                 <!-- Tooltip -->
                 <div class="absolute -bottom-8 left-1/2 -translate-x-1/2 bg-black/80 text-white text-[10px] px-2 py-1 opacity-0 group-hover:opacity-100 transition whitespace-nowrap tracking-widest uppercase border border-white/20">Dormitorio</div>
             </button>
 
-            <!-- 2. Living Comedor (Ajustado a 50%, con color ROJO) -->
-            <button onclick="openModal('4.jpg', 'Living Comedor')" 
+            <!-- 2. Living Comedor (Borde Derecho - 50%) -->
+            <!-- CAMBIO: Imagen 'livingcomedor.jpg' -->
+            <button onclick="openModal('livingcomedor.jpg', 'Living Comedor')" 
                     class="absolute top-[60%] left-[50%] group z-20 focus:outline-none hotspot-ring">
                 <div class="w-4 h-4 bg-red-600 rounded-full shadow-[0_0_15px_rgba(220,38,38,0.8)] group-hover:scale-125 transition duration-300"></div>
                 <!-- Tooltip -->
