--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -168,6 +168,7 @@
     <section id="work" class="w-full bg-black">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-0.5 bg-black">
             
+            <!-- Proyecto 1 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
                 <img src="1.jpg" onerror="this.src='https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
@@ -177,6 +178,7 @@
                 </div>
             </div>
 
+            <!-- Proyecto 2 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
                 <img src="2.jpg" onerror="this.src='https://images.unsplash.com/photo-1512958789358-4dac0f368d37?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
@@ -186,6 +188,7 @@
                 </div>
             </div>
 
+            <!-- Proyecto 3 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
                 <img src="4.jpg" onerror="this.src='https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
@@ -195,12 +198,33 @@
                 </div>
             </div>
 
+            <!-- Proyecto 4 -->
             <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
                 <img src="5.jpg" onerror="this.src='https://images.unsplash.com/photo-1486325212027-8081e485255e?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
                 <div class="absolute bottom-8 left-8 md:bottom-12 md:left-12 z-10 mix-blend-difference">
                     <p class="text-xs tracking-[0.2em] mb-2 opacity-0 group-hover:opacity-100 transition duration-500 delay-100 transform translate-y-4 group-hover:translate-y-0">HOTELERÍA</p>
                     <h3 class="text-3xl md:text-5xl font-light tracking-wide text-white">SUITE NARA</h3>
+                </div>
+            </div>
+
+            <!-- Proyecto 5 (NUEVO) -->
+            <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
+                <img src="dorprincipal.jpg" onerror="this.src='https://images.unsplash.com/photo-1595526114035-0d45ed16cfbf?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
+                <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
+                <div class="absolute bottom-8 left-8 md:bottom-12 md:left-12 z-10 mix-blend-difference">
+                    <p class="text-xs tracking-[0.2em] mb-2 opacity-0 group-hover:opacity-100 transition duration-500 delay-100 transform translate-y-4 group-hover:translate-y-0">INTERIORISMO</p>
+                    <h3 class="text-3xl md:text-5xl font-light tracking-wide text-white">MASTER SUITE</h3>
+                </div>
+            </div>
+
+            <!-- Proyecto 6 (NUEVO) -->
+            <div class="relative group h-[60vh] md:h-[80vh] overflow-hidden cursor-pointer project-card reveal">
+                <img src="livingcomedor.jpg" onerror="this.src='https://images.unsplash.com/photo-1567016432779-094069958ea5?q=80&w=1600&auto=format&fit=crop'" class="project-img w-full h-full object-cover transition-transform duration-1000 ease-out opacity-80 group-hover:opacity-100">
+                <div class="absolute inset-0 bg-black/20 group-hover:bg-transparent transition duration-500"></div>
+                <div class="absolute bottom-8 left-8 md:bottom-12 md:left-12 z-10 mix-blend-difference">
+                    <p class="text-xs tracking-[0.2em] mb-2 opacity-0 group-hover:opacity-100 transition duration-500 delay-100 transform translate-y-4 group-hover:translate-y-0">RESIDENCIAL</p>
+                    <h3 class="text-3xl md:text-5xl font-light tracking-wide text-white">LIVING ABIERTO</h3>
                 </div>
             </div>
 
