--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -231,75 +231,103 @@
             
             <!-- --- COCINAS --- -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_osmar.jpg', 'Cocina Osmar')">
-                <img src="cocina_osmar.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="cocina_osmar.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1556911220-e15b29be8c8f?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_tirado.jpg', 'Cocina Tirado')">
-                <img src="cocina_tirado.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="cocina_tirado.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1556909212-d5b604d0c90d?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_zecher.jpg', 'Cocina Zecher')">
-                <img src="cocina_zecher.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="cocina_zecher.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1565538810643-b5bdb714032a?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_español.jpg', 'Cocina Español')">
-                <img src="cocina_español.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="cocina_español.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1600585154526-990dced4db0d?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_floddy.jpg', 'Cocina Floddy')">
-                <img src="cocina_floddy.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="cocina_floddy.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1595846519845-68e298c2edd8?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <!-- --- BAÑOS --- -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baño_dawson1.jpg', 'Baño Dawson Principal')">
-                <img src="baño_dawson1.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="baño_dawson1.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1552321554-5fefe8c9ef14?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baños_dawson_2.jpg', 'Baño Dawson Detalle')">
-                <img src="baños_dawson_2.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="baños_dawson_2.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1584622050111-993a426fbf0a?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baños_dawson_3.jpg', 'Baño Dawson Visitas')">
-                <img src="baños_dawson_3.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="baños_dawson_3.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1620626011761-996317b8d101?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baño_español.jpg', 'Baño Estilo Español')">
-                <img src="baño_español.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="baño_español.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1507089947368-19c1da9775ae?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baño_tirado.jpg', 'Baño Tirado')">
-                <img src="baño_tirado.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="baño_tirado.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1554995207-c18c203602cb?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <!-- --- ESTAR & LIVING --- -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('livingcomedor.jpg', 'Living Abierto')">
-                <img src="livingcomedor.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="livingcomedor.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1600210492486-724fe5c67fb0?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('dorprincipal.jpg', 'Suite Principal')">
-                <img src="dorprincipal.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="dorprincipal.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1616594039964-40891a909d20?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <!-- NUEVAS IMÁGENES LIVING -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('living_osmar.jpg', 'Living Osmar')">
-                <img src="living_osmar.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="living_osmar.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1598928506311-c55ded91a20c?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('living_tirado.jpg', 'Living Tirado')">
-                <img src="living_tirado.jpg" class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
+                <img src="living_tirado.jpg" 
+                     onerror="this.src='https://images.unsplash.com/photo-1618221195710-dd6b41faaea6?q=80&w=1600&auto=format&fit=crop'"
+                     class="w-full h-full object-cover transition duration-700 group-hover:scale-110 opacity-80 group-hover:opacity-100">
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
