--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <!-- Grid de Galería -->
         <div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4" id="gallery-grid">
             
-            <!-- --- COCINAS --- -->
+            <!-- === COCINAS === -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="cocina" onclick="openModal('cocina_osmar.jpg', 'Cocina Osmar')">
                 <img src="cocina_osmar.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1556911220-e15b29be8c8f?q=80&w=1600&auto=format&fit=crop'"
@@ -265,7 +265,7 @@
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
-            <!-- --- BAÑOS --- -->
+            <!-- === BAÑOS === -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="bano" onclick="openModal('baño_dawson1.jpg', 'Baño Dawson Principal')">
                 <img src="baño_dawson1.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1552321554-5fefe8c9ef14?q=80&w=1600&auto=format&fit=crop'"
@@ -301,7 +301,7 @@
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
-            <!-- --- ESTAR & LIVING --- -->
+            <!-- === ESTAR & LIVING === -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('livingcomedor.jpg', 'Living Abierto')">
                 <img src="livingcomedor.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1600210492486-724fe5c67fb0?q=80&w=1600&auto=format&fit=crop'"
@@ -316,7 +316,6 @@
                 <div class="absolute inset-0 bg-black/40 group-hover:bg-transparent transition duration-500"></div>
             </div>
 
-            <!-- NUEVAS IMÁGENES LIVING -->
             <div class="gallery-item relative aspect-square overflow-hidden group cursor-pointer" data-category="estar" onclick="openModal('living_osmar.jpg', 'Living Osmar')">
                 <img src="living_osmar.jpg" 
                      onerror="this.src='https://images.unsplash.com/photo-1598928506311-c55ded91a20c?q=80&w=1600&auto=format&fit=crop'"
